# ai-agent-cybersecurity

./: .env.example  .gitignore  HOW-IT-WORKS.md  README.md  pyproject.toml
src/agent/: __init__.py  audit.py  checklist.py  collect.py  config.py  guard.py  identity.py  main.py  privilege.py  prompts.py  redact.py  report.py  ssh_tool.py
tests/: test_audit.py  test_checklist.py  test_collect.py  test_config.py  test_guard.py  test_identity.py  test_main_options.py  test_privilege.py  test_prompts.py  test_redact.py  test_report.py  test_ssh_tool.py
