[project]
name = "ai-security-agent"
version = "0.1.0"
description = "Read-only AI security reconnaissance agent (POC)"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
agent = "agent.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
